--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ file(GLOB QML_FILES "src/qml/*.qml")
 IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
     MESSAGE(STATUS "current platform: Linux ")
     file(GLOB QRC_FILES "src/resource.qrc")
-    qt6_policy(SET QTP0001 NEW)
+#    qt6_policy(SET QTP0001 NEW)
 ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
     MESSAGE(STATUS "current platform: Windows")
     set(QRC_FILES "src/resource.qrc")
